--- a/assets/css/cardio.css
+++ b/assets/css/cardio.css
@@ -518,6 +518,7 @@ section {
 .team {
 	margin: 80px 0;
 	padding-bottom: 60px;
+	padding-top:1px;
 	background: white;
 	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.07);
 }
