--- a/assets/css/cardio.css
+++ b/assets/css/cardio.css
@@ -188,12 +188,12 @@ nav.navbar-fixed-top {
 	top: 0;
 	padding: 25px 0;
 	opacity: 0;
-	background: white;
+	background: #003b46;
 	box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.05);
 }
 
 nav.navbar-fixed-top .navbar-nav > li > a:not(.btn) {
-	color: #bbb;
+	color: #fff;
 }
 
 .icon-bar {
